# langchain-workshop

./: .gitpod.yml  README.md  pyproject.toml
0_playground/: Untitled.ipynb  code_writting.py  oscars.csv
1_prompt_answer/: app.py  playground.py
2_prompt_template/: app.py  playground.py
3_summarize/: app.py  playground.py
4_documents/: app.py  playground.py
5_memory/: app.py  playground.py
6_sql/: playground.py
7_sql/: playground.ipynb  playground.py
playground/: code_writting.ipynb
st_tutorial_1/: app.py  playground.py  utils.py
st_tutorial_2/: playground.py
st_tutorial_3/: playground.ipynb  playground.py
