[tool.poetry]
name = "lanchain-workshop"
version = "0.1.0"
description = ""
authors = ["Mackaber <x@mackaber.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.1.1"
streamlit = "^1.28.1"
tiktoken = "^0.5.1"
pypdf = "^3.17.0"
chromadb = "^0.4.15"
psycopg2 = "^2.9.9"
langchain-experimental = "^0.0.38"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
